--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Harry Potter Awesomeness</title>
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
 </head>
 <body>
 	<h1>Hello</h1>
-	<div id="cast">
+	<div id="main">
+	<ul id="cast">
+	</ul>
 		
 	</div>
 <script src="js/main.js"></script>
